# carmera_recorder

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  camera_recorder.sln  camera_recorder.vcxproj  cmake_build.bat  cmake_build2.bat  main.cpp  readme.md
base/: mf_device_def.h
ui/: recoder_widget.cpp  recorder_widget.h
video_frame/: i420_buffer.cpp  i420_buffer.h  yuv_buffer.cpp  yuv_buffer.h
win_capturer/: color_helper.cpp  color_helper.h  mf_device.cpp  mf_device.h  mf_device_def.h  video_capturer.cpp  video_capturer.h  win_capturer_helper.cpp  win_capturer_helper.h
